# av_srt_generation

./: README.md  blueprint.md  pyproject.toml
docs/: decisions.md  troubleshooting.md
src/av_srt_generation/: cli.py
src/av_srt_generation/io/: json_io.py  subprocess_run.py
src/av_srt_generation/pipeline/: __init__.py  asr.py  audio.py  gate.py  subtitles.py  translate.py  vad.py  workspace.py
src/av_srt_generation/utils/: __init__.py  prereqs.py
tests/: conftest.py  test_asr.py  test_audio.py  test_gate.py  test_prereqs.py  test_subtitles.py  test_translate.py  test_vad.py  test_workspace.py
